# insight-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/tests/: test_main.py
terraform/: cloud-run.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
